<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/fragment_onboarding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/boarding_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/skip_margin_top"
        android:layout_marginEnd="@dimen/skip_text_margin_end"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/drawable_padding"
        android:text="@string/skip"
        android:textColor="@color/text_grey_color"
        android:textSize="@dimen/text_size_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/boarding_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boarding_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="6sp"
        android:paddingBottom="10dp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_lg"
        app:layout_constraintBottom_toBottomOf="@id/boarding_image"
        app:layout_constraintEnd_toEndOf="@id/boarding_image"
        app:layout_constraintStart_toStartOf="@id/boarding_image" />

    <TextView
        android:id="@+id/boarding_description"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="6sp"
        android:text="@string/ride_option_appear_on_map"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boarding_image" />

    <TextView
        android:id="@+id/boarding_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/next"
        android:textColor="#00b8aa"
        android:textSize="@dimen/text_size_md"
        android:layout_marginBottom="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf ="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>